--- a/sportico-wbb-roster/sportico_wbb_roster.Rmd
+++ b/sportico-wbb-roster/sportico_wbb_roster.Rmd
@@ -96,6 +96,8 @@ all_players <- inner_join(all_players23_24, all_players22_23, by = "ncaa_id")
 
 ```
 
+
+
 ```{r}
 # cleaning the all_players df
 all_players <- all_players %>% 
@@ -134,42 +136,13 @@ all_players <- all_players %>%
 
 Here I will answer the obvious outstanding questions and try to formulate a story narrative after it.
 
-Which conference has most players
-
-```{r}
-# totals per conf
-conf_counts23_24 <- non_us_23_24 %>% 
-  filter(division == "I") %>% 
-  group_by(conference) %>% 
-  summarize(players_23_24 = n())
-  
-  conf_counts_22_23 <- non_us_22_23 %>% 
-  filter(division == "I") %>% 
-  group_by(conference) %>% 
-  summarize(players_22_23 = n())
-  
-  total_conf <- inner_join(conf_counts23_24, conf_counts_22_23, by = "conference")
-  
-  #internationals
-by_conf <- all_players %>% 
-  group_by(conference) %>% 
-  summarise(int_players_23_24 = sum(int_players_23_24),
-            int_players_22_23 = sum(int_players_22_23))
-#joining
-all_conf <- inner_join(by_conf, total_conf, by="conference")
-
-all_conf <- all_conf %>%  
-  mutate(diff= int_players_23_24 - int_players_22_23,
-         conf_perc_23_24 = int_players_23_24/sum(int_players_23_24)*100,
-         conf_int_perc_22_23 = int_players_22_23/sum(int_players_22_23)*100)
-```
 
 which countries produce the most players
 
 ```{r}
 #23-24
 countries_23_24 <- non_us_23_24 %>% 
-    group_by(country_clean) %>% 
+  group_by(country_clean) %>% 
   summarize(int_players = n()) %>% 
   arrange(desc(int_players))
 
@@ -236,7 +209,7 @@ ncaat_teams <- all_players %>%
 
 ```{r}
 #Filtering to see what the tourney teams looked like w internationals
-# Unsure of why this produces 67 and not 68
+
 ncaa_yes22_23 <- ncaat_teams %>% 
   filter(tourny_team_22_23 == "y") %>% 
   select(team, conference, int_players_22_23, total_22_23, int_players_22_23, int_player_perc_22_23) %>% 
@@ -260,6 +233,8 @@ ncaa_yes23_24 <- ncaat_teams_both_yrs %>%
   select(team, conference, int_players_23_24, total_23_24, int_players_23_24, int_player_perc_23_24) %>% 
   arrange(desc(int_player_perc_23_24))
 ```
+
+
 
 Run a mutate case_when to add seeds to the team's in `ncaa_yes23_24`
 
@@ -343,10 +318,6 @@ ncaa_yes23_24_seeds <- ncaa_yes23_24 %>%
 ```
 
 
-
-
-
-
 Which teams both have yes
 ```{r}
 
@@ -362,23 +333,31 @@ ncaat_last_no_this_yes <- ncaat_teams_both_yrs %>%
 ```
 
 
-total number of players in 2022-23 vs 2023-24 tournament
+
+
+total number of international players in 2022-23 vs 2023-24 tournament
 
 ```{r}
 
 #22-23
 total_players_22_23 <- non_us_22_23 %>% 
   filter(team %in% ncaat_22_23) %>% 
-  summarize(total_plyers = n())
-# total players is 157
+  summarize(total_players = n())
+# total int players is 157
 
 #23-24
-total_players_23_24 <- non_us_23_24 %>% 
+total_players_23_24 <-  non_us_23_24 %>% 
   filter(team %in% ncaat23_24) %>% 
-  summarize(total_plyers = n())
-#total players is 149
+  summarize(total_players = n())
+#total int players is 149
+
+
+# percentage of international players in the tournament
+
+149/933
 
 ```
+
 
 Coutnries in the tournament
 
@@ -401,6 +380,18 @@ tourney_countries_22_23 <- non_us_22_23 %>%
   arrange(desc(int_players))
 
 ```
+
+
+database of internatinal tourney players
+```{r}
+
+int_tourney_players_23_24 <- non_us_23_24 %>% 
+  filter(team %in% ncaat23_24)
+
+```
+
+
+
 
 Exporting data
 ```{r}
